force-app/main/default/objects/cf123__Submission__c/cf123__Submission__c.object-meta.xml
<CustomObject>
    <label>123FB Submission</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>123FB Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>