force-app/main/default/objects/cf123__Submission__c/fields/cf123__Form__c.field-meta.xml
<CustomField>
    <fullName>cf123__Form__c</fullName>
    <label>Form</label>
    <referenceTo>cf123__Form__c</referenceTo>
    <relationshipName>Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>