force-app/main/default/objects/cf123__Submission__c/fields/cf123__Form_Sent_Log__c.field-meta.xml
<CustomField>
    <fullName>cf123__Form_Sent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Send Log</label>
    <referenceTo>cf123__Form_Send_Log__c</referenceTo>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>