force-app/main/default/objects/cf123__Submission__c/fields/cf123__Object__c.field-meta.xml
<CustomField>
    <fullName>cf123__Object__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>