force-app/main/default/objects/cf123__Submission__c/fields/cf123__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>cf123__Object_Label__c</fullName>
    <label>Object Name (Label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>