force-app/main/default/objects/cf123__Submission__c/fields/cf123__Ready__c.field-meta.xml
<CustomField>
    <fullName>cf123__Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready</label>
    <type>Checkbox</type>
</CustomField>