force-app/main/default/objects/cf123__Submission__c/fields/cf123__Received_Date__c.field-meta.xml
<CustomField>
    <fullName>cf123__Received_Date__c</fullName>
    <label>Received Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>