force-app/main/default/objects/cf123__Submission__c/fields/cf123__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cf123__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>