force-app/main/default/objects/cf123__Submission__c/fields/cf123__Submission_External_Id__c.field-meta.xml
<CustomField>
    <fullName>cf123__Submission_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Submission External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>