force-app/main/default/objects/cf123__Submission__c/listViews/cf123__All.listView-meta.xml
<ListView>
    <fullName>cf123__All</fullName>
    <columns>NAME</columns>
    <columns>cf123__Object_Label__c</columns>
    <columns>cf123__Received_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>